

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp">
        <android.support.v7.widget.CardView
            android:id="@+id/intro_card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:transitionName="@string/card_view_transition_name"
            app:cardElevation="@dimen/card_elevation">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/intro_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxEms="25"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_horizontal_margin"

                    android:text="@string/introduction_text" />
                <Button
                    android:id="@+id/read_rules_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/intro_text_view"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/colorPrimaryDark"
                    style="?android:attr/borderlessButtonStyle"
                    android:text="@string/read_rules_button_text" />
                <Button
                    android:id="@+id/lets_play_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/intro_text_view"
                    android:layout_alignRight="@id/intro_text_view"
                    android:textColor="@color/colorPrimaryDark"
                    style="?android:attr/borderlessButtonStyle"
                    android:text="@string/lets_play_button_text" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
