<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.lewismcgeary.androidgameoflife.IntroActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/intro_card_view"
        android:transitionName="@string/card_view_transition_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/intro_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"

            android:text="@string/introduction_text"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/intro_done_button"
            android:transitionName="@string/fab_transition_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/intro_text_view"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_done_24dp"/>
    </RelativeLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>
