<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LifeGameActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/toolbar_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:elevation="@dimen/tool_bar_elevation"
                app:title="@string/app_name"
                app:titleTextColor="@android:color/white"/>
        </FrameLayout>
    </android.support.design.widget.AppBarLayout>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/start_reset_fab"
        android:transitionName="@string/fab_transition_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_play_arrow_24dp"
        android:tag="@string/start_button_text"
        app:elevation="@dimen/floating_action_button_elevation"
        android:visibility="gone"/>

</android.support.design.widget.CoordinatorLayout>
